docs/v0.2.x/en-US/i18n.md
<!-- title: Internationalization; order: 14 -->
# Internationalization Support

You have learned that there is a `src/locales/` directory that stores 
language packs, here I will give you more details about locales and show you 
how to use it.

## Create A Language Pack

You just need to create a `.json`, `.ts`, or `.js` file in `src/locale/`, the 
file is named according to [RFC 1766](https://www.ietf.org/rfc/rfc1766.txt) 
standard, e.g. `en-US`, `zh-CN`, `ko`. If it is a `.ts` or `.js` file, it 
should export a default object that contains statements and translations.

### Language Pack Example

```json
// en-US.json
{
    "Hello, World!": "Hello, World!",
    "This is my first sfn application.": "This is my first sfn application."
}
```

```typescript
// zh-CN.ts
export default {
    "Hello, World!": "你好，世界！",
    "This is my first sfn application.": "这是我的第一个 sfn 应用。"
};
```

```javascript
// ko.js
exports.default = {
    "Hello, World!": "안녕, 세상!",
    "This is my first sfn application.": "이것은 내 첫 sfn 응용 프로그램입니다."
}
```

You see that here the `en-US` is the default language (because its keys is the
same as its values), so you can write it in a short-hand.

```json
// en-US.json
[
    "Hello, World!",
    "This is my first sfn application."
]
```

### Setting Up Default Language

In file `config.ts`, setting `config.lang` to change the default language that
the application uses:

```typescript
export const config: SFNConfig = {
    // ...
    lang: "en-US",
    // ...
};
```

## I18n in A Service

In a service (or extended services like HttpController, WebSocketController, 
etc), you can use the method `i18n()` to load the proper translation according
to the statement.

### Example of Using `i18n()`

```typescript
import { HttpController, route } from "sfn";

export default class extends HttpController {
    @route.get("/")
    index() {
        return this.i18n("Hello, World!");
    }
}
```

The framework will automatically check what language the client supports in a 
HttpController or WebSocketController.

In a HttpController, these fields will be checked in the following sequence：

- `req.query.lang` language name appears in the URL query string.
- `req.cookies.lang` language name appears in cookies.
- `req.lang` language name appears in request header `Accept-Language`.

In a WebSocketController, this fields will be checked in the following 
sequence：

- `socket.cookies.lang` language name appears in cookies.
- `socket.lang` language name appears in request header `Accept-Language`.

Apart from auto-checking, you can always set a specified language name in the 
service definition.

```typescript
import { HttpController, route } from "sfn";

export default class extends HttpController {
    lang = "ko";

    @route.get("/")
    index() {
        return this.i18n("Hello, World!"); // => 안녕, 세상!
    }
}
```

If none of these properties are set, the default language will be used.

## I18n in Templates

In a template (a.k.a view file), you can use the function `i18n()` to get 
translations instead.

```html
<p>
    <%= i18n("This is an example"); %>
</p>
```

## Other Details

If the request statement doesn't exists in the language pack, it will be 
output as what it is. Like `console.log()`, you can set placeholders like 
`%s`, `%d`, etc. in the statement, and pass replacements to the rest arguments
of `i18n()`.

```javascript
i18n("This is an %s.", "example"); // => This is an example.
```